# fm-backend

./: .gitignore  manage.py  pyproject.toml  test_websearch.py
ai/: open_ai_client.py  prompts.py  utils.py
ai/examples/: __init__.py  openai_example.py
auth_api/: __init__.py  apps.py  middleware.py
auth_api/graphql/: permissions.py  schema.py
auth_api/tests/: __init__.py  test_login.py
common/: geocoding.py  models.py
family_map/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
place/: admin.py  models.py
place/migrations/: 0001_initial.py  0002_alter_place_type.py  0002_place_street_place_zip_code_and_more.py  0002_rename_lat_place_location_remove_place_lon.py  0003_add_timestamp_fields.py  0003_alter_place_scraped_id.py  0004_place_car_needed.py  0005_place_scraped_id_2_alter_place_scraped_id.py  0006_remove_place_scraped_id.py  0007_rename_scraped_id_2_place_scraped_id.py
place/tests/: test_created_updated_model.py
scraping/: admin.py  models.py
scraping/migrations/: 0001_initial.py  0002_remove_scrapedplace_type_remove_scrapedpost_places_and_more.py  0003_scrapedplace_processed.py  0004_scrapedplace_city.py  0005_scrapedpost_created_at_and_more.py  0006_scrapedpost_is_processed.py  0007_alter_scrapedplace_post.py  0008_alter_scrapedplace_post.py
users/: README.md  admin.py  apps.py  models.py  schema.py  utils.py
users/examples/: __init__.py  jwt_example.py
users/management/: __init__.py
users/migrations/: 0001_initial.py  0002_userprofile_role.py
users/tests/: __init__.py  test_auth.py  utils.py
(+9 files in other folders)
